# fastapi-avancado-2024

./: .gitignore  README.md  pyproject.toml
projeto_01/: converter.py  main.py  routers.py
