[tool.poetry]
name = "curso-fastapi"
version = "0.0"
description = ""
authors = ["Andre Marcelino <marcelinoandre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
requests = "^2.31.0"
aiohttp = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
